crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@100.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from numrange_test2 where nr = 'empty'::numrange;"
---
SelectStmt@0..58
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..28
    Ident@14..28 "numrange_test2"
  Whitespace@28..29 " "
  Where@29..34 "where"
  Whitespace@34..35 " "
  AExpr@35..57
    ColumnRef@35..37
      Ident@35..37 "nr"
    Whitespace@37..38 " "
    Ascii61@38..39 "="
    Whitespace@39..40 " "
    TypeCast@40..57
      AConst@40..47
        Sconst@40..47 "'empty'"
      Typecast@47..49 "::"
      TypeName@49..57
        Ident@49..57 "numrange"
  Ascii59@57..58 ";"

