crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@101.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from numrange_test2 where nr = numrange(1.1, 2.2);"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..28
    Ident@14..28 "numrange_test2"
  Whitespace@28..29 " "
  Where@29..34 "where"
  Whitespace@34..35 " "
  AExpr@35..57
    ColumnRef@35..37
      Ident@35..37 "nr"
    Whitespace@37..38 " "
    Ascii61@38..39 "="
    Whitespace@39..40 " "
    FuncCall@40..57
      Ident@40..48 "numrange"
      Ascii40@48..49 "("
      AConst@49..52
        Fconst@49..52 "1.1"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..57
        Fconst@54..57 "2.2"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

