crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@120.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index textrange_test_btree on textrange_test(tr);
---
IndexStmt@0..56
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..33 "textrange_test_btree"
  Whitespace@33..34 " "
  On@34..36 "on"
  Whitespace@36..37 " "
  RangeVar@37..51
    Ident@37..51 "textrange_test"
  Ascii40@51..52 "("
  IndexElem@52..54
    Ident@52..54 "tr"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

