crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@122.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO textrange_test VALUES('[\"a\",]');"
---
InsertStmt@0..44
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "textrange_test"
  Whitespace@26..27 " "
  SelectStmt@27..42
    Values@27..33 "VALUES"
    Ascii40@33..34 "("
    List@34..42
      AConst@34..42
        Sconst@34..42 "'[\"a\",]'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

